--- a/custom.css
+++ b/custom.css
@@ -139,7 +139,11 @@ body{
     transition: 0.5s;
 }
 /*--------------------------------------------product-bottom-----------------------------------------------*/
-.product-bottom .fas{
+.product-bottom .fas {
+    color: orange;
+    font-size: 10px;
+}
+.product-bottom .far {
     color: orange;
     font-size: 10px;
 }
@@ -151,3 +155,65 @@ body{
     font-size: 15px;
     padding-bottom: 10px;
 }
+/*------------------------------------single-product----------------------------------------------------------*/
+.single-product{
+    margin-top: 70px;
+}
+.new-arrival{
+    background: green;
+    width: 50px;
+    color: #fff;
+    font-size: 12px;
+    font-weight: bold;
+    margin-top: 20px;
+}
+.col-md-7 h2
+{
+    color: #555;
+}
+.single-product .fas{
+    color: orange;
+}
+.single-product .price{
+    color: orange;
+    font-size: 26px;
+    font-weight: bold;
+    padding-top: 20px;
+}
+.single-product input{
+    border: 1px solid #ccc;
+    font-weight: bold;
+    height: 33px;
+    text-align: center;
+    width: 30px;
+}
+.single-product .btn-primary{
+    background: orange !important;
+    color: #fff;
+    font-size: 15px;
+    border: none;
+    box-shadow: none !important;
+}
+/*---------------product description-------------------------------------*/
+.product-descrption h6{
+    margin-top: 50px;
+    color: orange;
+}
+.product-descrption p{
+    margin-top: 30px;
+    
+}
+.product-descrption hr{
+    margin-bottom: 50px;
+}
+
+
+
+
+
+
+
+
+
+
+
